version/0.19/_sources/api/solver/_autosummary/settings/vw_reynolds_stresses.rst.txt
:orphan:

.. _vw_reynolds_stresses:

vw_reynolds_stresses
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.vw_reynolds_stresses.vw_reynolds_stresses
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`turbulence <turbulence>`       Help not available.

==============================   =======================

