version/0.27/_sources/api/solver/_autosummary/settings/vw_reynolds_stresses.rst.txt
:orphan:

.. _vw_reynolds_stresses:

vw_reynolds_stresses
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.vw_reynolds_stresses
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_31>`                Specify how the boundary condition will be defined.

:ref:`value <value_17>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`turbulence_1 <turbulence_1>`                                  Allows to change turbulence model variables or settings.

:ref:`turbulence_2 <turbulence_2>`                                  Allows to change turbulence model variables or settings.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

:ref:`turbulence_5 <turbulence_5>`                                  Allows to change turbulence model variables or settings.

====================================================   =====================================================================

